# shp-engine

./: .env.example  .gitignore  README.md  batch_research.py  brand_bible.md  channel_analyzer.py  channels.json  commander.py  company_handbook.md  competitor_analyzer.py  content_bible.md  decision_engine.py  decision_engine_v2.py  dispatcher.py  effort_filter.py  final_run.py  growth_advisor.py  learning_engine.py  niche_intelligence.py  producer_prompt.md  pyproject.toml  requirements.txt  script_agent.py  script_agent_v2.py  shp_core.md  story_report.py  story_score.py  test_commander.md  video_ceo.py  video_dna.py  video_engine.py  voiceover_engine.py  youtube_uploader.py
.github/workflows/: channel-health.yml  ci.yml  competitor-health.yml  decision-v2.yml  dispatch.yml  run-shp.yml  video-dna.yml  youtube-research.yml
docs/: DECISIONS.md  SHP_CONSTITUTION.md  SHP_FULL_SYSTEM_AUDIT.md  STATE.md
photographer_ai/: README.md  __init__.py  cli.py  io_utils.py  models.py  pipeline.py  requirements.txt
projects/: batch-ranking.json  batch-ranking.md  dispatch-log.json  story-dna.json  story-dna.md
script_agent_v2/: __init__.py  context.py  llm.py  outputs.py  pipeline.py  textutil.py
src/shp_engine/: cli.py  (+6 more)
tests/: test_ceo_reviewer.py  test_decision_engine_v2.py  test_engines_not_placeholder.py  test_fact_engine.py  test_final_run.py  test_full_pipeline_approve.py  test_gemini_provider.py  test_honest_fallback.py  test_learning_engine.py  test_production_package.py  test_video_ceo.py  test_video_engine.py  test_voiceover_engine.py  test_youtube_uploader.py
(+75 files in other folders)
