[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shp-engine"
version = "0.1.0"
description = "Safe video automation engine skeleton for Orhan AI workflows"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "rich==13.7.1",
]

[project.scripts]
shp-engine = "shp_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
