[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shp-engine"
version = "0.2.0"
description = "Automatic vertical video generator for Orhan AI workflows"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "rich==13.7.1",
  "moviepy==1.0.3",
  "Pillow==9.5.0",
  "imageio-ffmpeg==0.5.1",
]

[project.scripts]
shp-engine = "shp_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
